--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dom": "^0.0.3",
     "firebase": "^12.1.0",
     "lucide-react": "^0.544.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
